fix: [pd-1323][pd-1324] color varient plus sign and plp page overlapping issue

--- a/src/component/ProductItem/ProductItem.style.scss
+++ b/src/component/ProductItem/ProductItem.style.scss
@@ -268,8 +268,8 @@
         margin-left : 5px;
         font-weight: bold;
         &_isArabic {
-          margin-left : 0px;
-          margin-right: 6px;
+          margin-left : 6px;
+          margin-right: 0px;
         }
       }
     }
